Fix screenshots in old commentary layout being way too small

--- a/museum_site/static/css/article.css
+++ b/museum_site/static/css/article.css
@@ -153,7 +153,6 @@ article[data-schema="80col"]
 .material
 {
     margin-right:0.5em;
-    flex:1;
 }
 
 @media (max-width:1280px)
